# Task_3_sem_4

./: CComplNumb.cpp  CComplNumb.h  CComplVect.cpp  CComplVect.h  CComplVectHori.cpp  CComplVectHori.h  CComplVectVert.cpp  CComplVectVert.h  CFactoryComplVect.h  CFactoryComplVectHori.cpp  CFactoryComplVectHori.h  CFactoryComplVectVert.cpp  CFactoryComplVectVert.h  CMakeLists.txt  autotests.cpp  autotests.h  main.cpp
